[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prog/Nodes/Scripts/Slider.gd" type="Script" id=1]

[node name="Slider" type="GraphNode"]
margin_right = 150.0
margin_bottom = 75.0
title = "Slider"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 0.133333, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="."]
margin_left = 16.0
margin_top = 41.0
margin_right = 134.0
margin_bottom = 41.0

[node name="Min" type="LineEdit" parent="Control"]
margin_left = -2.0
margin_top = 12.0
margin_right = 116.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
text = "0"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control"]
margin_left = -6.0
margin_top = -3.0
margin_right = 60.0
margin_bottom = 13.0
text = "Min"
align = 1
valign = 1

[node name="Control2" type="Control" parent="."]
margin_left = 16.0
margin_top = 42.0
margin_right = 134.0
margin_bottom = 42.0

[node name="Max" type="LineEdit" parent="Control2"]
margin_left = 69.0
margin_top = 10.0
margin_right = 171.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )
text = "100"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control2"]
margin_left = 59.0
margin_top = -5.0
margin_right = 127.0
margin_bottom = 9.0
text = "Max"
align = 1
valign = 1

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="Control/Min" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="Control2/Max" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Control2/Max" to="." method="_on_LineEdit_text_entered"]
